# tinyland-logging-middleware

./: .bazelrc  BUILD.bazel  MODULE.bazel  flake.nix  package.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: config.ts  create-logger.ts  index.ts  middleware.ts  types.ts
tests/: logging-middleware.test.ts
