"""
BUILD.bazel for @tummycrypt/tinyland-logging-middleware.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/tinyland-logging-middleware && pnpm build
  Monorepo:   bazel build //packages/tinyland-logging-middleware/...
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")


ts_project(
    name = "tinyland_logging_middleware",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        "//:node_modules",
        "//:tsconfig_base",
        "//:node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":tinyland_logging_middleware",
    ],
    package = "@tummycrypt/tinyland-logging-middleware",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

ts_project(
    name = "tinyland_logging_middleware_test_lib",
    srcs = glob(["tests/**/*.test.ts"]),
    declaration = False,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":tinyland_logging_middleware",
        "//:node_modules",
        "//:node_modules/vitest",
    ],
)

js_test(
    name = "test",
    data = [
        ":tinyland_logging_middleware",
        ":tinyland_logging_middleware_test_lib",
        "//:node_modules",
        "//:node_modules/vitest",
        "vitest.config.ts",
    ],
    entry_point = "//:node_modules/vitest/vitest.mjs",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
